--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
+  "functions": {
+    "api/apify/[...path].js": {
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
+    {
+      "source": "/api/apify/(.*)",
+      "destination": "/api/apify/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
