Fix TypeScript dependency conflicts for Vercel deployment
- Downgrade TypeScript to 5.8.4 for compatibility with typescript-eslint
- Update typescript-eslint to compatible version 8.15.0
- Add legacy-peer-deps flag to Vercel build command
- Ensure clean build process for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "functions": {
     "api/apify/[...path].js": {
       "maxDuration": 30
